# CTDenoiser

./: .gitignore  README.md  llmoutput  manage_sweep.py  pyproject.toml  requirements.txt  sweep.py  sweep.yml  sweep_flow_vs_reg.yml  sweep_hallucination.yml  sweep_natural.yml  sweep_natural_flow_vs_reg.yml  sweep_natural_hallucination.yml  sweep_periimage.yml  sweep_sim_ldct.yml  sweep_ssflow.yml  todo.md
ctdenoiser/: __init__.py  detectability.py  inference.py  metrics.py  selfsupervised.py  train.py  zeroshot.py
ctdenoiser/data/: __init__.py  dataset.py  dicom.py  noise.py
ctdenoiser/models/: __init__.py  ctformer.py  dncnn.py  unet.py  (+3 more)
docs/: future.md  plan.md  plan_2026-07-21.md
figures/: model_comparison_table.txt  sweep_report.txt
k8s/: data_pod.yml  pod.yml  pvc.yml  tr_job.yml  tr_job_template.yml  tr_job_template_synth.yml
notebooks/: 00_build_cache.ipynb  colab_quickstart.ipynb  ctdenoiser_colab.ipynb  ctdenoiser_wandb_sweep.ipynb  data_prep.ipynb
paper/: main.tex  meeting_draft.tex  method_ssflow.tex
results/: README.md  benchmark_abdomen.csv  flow_vs_reg_abdomen.csv  hallucination_abdomen.csv  natural_flow_vs_reg_gaussian.csv  natural_hallucination_gaussian.csv
scripts/: analyze_sweep.py  benchmark_report.py  convert_dicom_to_h5.py  evaluate_detectability.py  figure_detectability.py  figure_qualitative.py  figure_steps.py  figures.py  sweep_report.py
tests/: test_anatomy_and_report.py  test_dataset_norm.py  test_detectability.py  test_models.py  test_selfsupervised.py  test_ssflow.py  test_synthetic_datasets.py  test_train_flow_selfsup.py
(+1 files in other folders)
