[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctdenoiser"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "pydicom>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
h5 = ["h5py>=3.0"]
# Only the --natural-root path (reading real image files) needs Pillow; the
# procedural natural-image set is pure numpy.
images = ["pillow>=9.0"]

[tool.setuptools.packages.find]
include = ["ctdenoiser*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
